Build out rest api example with async form handling

--- a/examples/rest-api/src/app/index.html
+++ b/examples/rest-api/src/app/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Rest API Example</title>
-    <link rel="stylesheet" href="/bootstrap.css" media="all">
+    <link rel="stylesheet" href="primer.css" media="all">
   </head>
   <body>
     <div id="app"></div>
