--- a/docs/sass/main.scss
+++ b/docs/sass/main.scss
@@ -105,6 +105,9 @@
   &--top {
     width: 100%;
     height: 34px;
+    display: -webkit-flex;
+    -webkit-flex-direction: "row";
+
     display: flex;
     flex-direction: "row";
   }
@@ -117,6 +120,7 @@
 
   &--top-middle {
     height: 34px;
+    -webkit-flex: 1;
     flex: 1;
     background-image: url('img/browser_top_middle.png')
   }
