--- a/docs/output.css
+++ b/docs/output.css
@@ -7209,7 +7209,7 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   padding: 0;
   position: relative; }
   .tour-section--example {
-    padding: 5em 0 0 !important; }
+    padding: 7em 0 0 !important; }
   .tour-section--info {
     padding: 3em 0 !important; }
   .tour-section--title {
@@ -7224,18 +7224,19 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   text-align: center;
   margin: 1em 0; }
 
-.example-shadow, .browser-component, .state-viewer.active {
+.example-shadow, .browser-component {
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.2); }
 
 .example-box, .browser-component, .state-viewer {
   margin: 0 auto 10px; }
 
 .example-step {
-  min-height: 150px; }
+  min-height: 150px;
+  margin: 1em 0; }
   .example-step--title {
     line-height: 1.5em;
     font-weight: 300;
-    margin-left: 1em; }
+    /*margin-left: 1em;*/ }
 
 .browser-component {
   background: white; }
@@ -7274,7 +7275,7 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
     padding: 3px;
     transition: fade 1s; }
   .browser-component table {
-    margin-bottom: 1em; }
+    margin-bottom: 2em; }
 
 .state-viewer {
   overflow: auto;
@@ -7282,8 +7283,7 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   padding: 0 10px; }
   .state-viewer.active {
     background-color: #f8f8f8;
-    border: 1px solid #ddd;
-    border-top: 10px solid #ddd; }
+    border: 1px solid #eee; }
   .state-viewer--contents {
     font-size: 11px;
     font-family: Consolas, "Courier New", monospace; }
