Complete static site generation grunt tasks
Move all doc files into doc/ directory

--- a/docs/sass/main.scss
+++ b/docs/sass/main.scss
@@ -37,8 +37,10 @@
 @import "components/date_picker/default.date.scss";
 @import "components/date_picker/default.time.scss";
 
-@import "../node_modules/highlight.js/styles/github.css";
+@import "github.scss";
 
+
+$img-path: "../img/" !default;
 
 .tour-section {
   padding: 3em 0 !important;
@@ -113,20 +115,20 @@
   &--top-left {
     width: 50px;
     height: 34px;
-    background-image: url('img/browser_top_left.png')
+    background-image: url("#{$img-path}/browser_top_left.png")
   }
 
   &--top-middle {
     height: 34px;
     -webkit-flex: 1;
     flex: 1;
-    background-image: url('img/browser_top_middle.png')
+    background-image: url("#{$img-path}/browser_top_middle.png")
   }
 
   &--top-right {
     height: 34px;
     width: 50px;
-    background-image: url('img/browser_top_right.png')
+    background-image: url("#{$img-path}/browser_top_right.png")
   }
 
   &--content {
