Implemented state for the side bar.

--- a/docs/sass/main.scss
+++ b/docs/sass/main.scss
@@ -255,7 +255,12 @@ pre code.hljs {
 .sidebar-links {
   &--item {
     line-height: 1.2em;
+    margin-top: 1em;
     margin-bottom: 1em;
+  }
+  &--item-active {
+    background-color: #E8E4E4;
+    padding: 1em;
   }
 }
 
